2013-07-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-spec2.boot: Allow calling Lisp
	macros from interpreter.

2013-07-03  Ralf Hemmecke <ralf@hemmecke.org>

	* configure.ac: Remove unused AUTO_GOOD_SHELL.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet: Add more operators.

2013-07-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-map.boot: Avoid exponential time in
	'mapRecurDepth'.

2013-06-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet,
	src/algebra/intef.spad.pamphlet: Rename 'limitedint'
	to 'logint', etc.

2013-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/parse.boot,
	src/interp/msg.boot: Misc cleanups.

2013-06-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/parsing.lisp
	src/interp/scwrap2.boot: Add charactes position to
	tokens, clean up handling of nonblank info.

2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/nrunopt.boot,
	src/interp/spad.lisp, src/interp/util.lisp:  Bind '$'
	only during evaluation of categories.

2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Add mising backslash, remove potentially
	unportable construct.

2013-06-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/graph/view3D/process3d.c:	 Turn on outline after
	graphic reset.

2013-06-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/view3D.spad.pamphlet: Change default style
	of 3D graphics.

2013-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet,
	src/algebra/mrv_limit.spad.pamphlet: Better zero test
	during limit computation.

2013-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scwrap2.boot: Report scanning errors
	during compilation.

2013-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elemntry.spad.pamphlet: Change formula