@@ -1,3 +1,9 @@
+2013-07-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/i-syscmd.boot, src/interp/trace.boot,
+	src/interp/macros.lisp, src/interp/lisplib.boot,
+	src/interp/ncomp.boot: Misc cleanups.
+
 2013-07-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/i-spec2.boot: Allow calling Lisp
